# advent-of-code-haskell

./: .drone.yml  .travis.yml  LICENSE  README.md  advent-of-code-haskell.cabal  adventofcode-haskell.cabal  stack.yaml
app/: Main.hs
src/Day1/: NotQuiteLisp.hs
src/Day2/: IWasToldThereWouldBeNoMath.hs
src/Day3/: PerfectlySphericalHousesInAVacuum.hs
src/Day4/: TheIdealStockingStuffer.hs
src/Day5/: DoesntHeHaveInternElvesForThis.hs
test/Day1/: NotQuiteLispSpec.hs
test/Day2/: IWasToldThereWouldBeNoMathSpec.hs
test/Day3/: PerfectlySphericalHousesInAVacuumSpec.hs
test/Day4/: TheIdealStockingStufferSpec.hs
test/Day5/: DoesntHeHaveInternElvesForThisSpec.hs
