name:                advent-of-code-haskell
version:             0.1.0.0
synopsis:            Advent of Code in Haskell
description:         Please see README.md
homepage:            http://github.com/fboyer/advent-of-code-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Frédéric Boyer
maintainer:          fboyer@gmail.com
copyright:           Copyright: (c) 2015 Frédéric Boyer
category:            Learning Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1.NotQuiteLisp
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent-of-code-haskell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent-of-code-haskell
  default-language:    Haskell2010

test-suite advent-of-code-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent-of-code-haskell
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fboyer/advent-of-code-haskell
