name:                adventofcode-haskell
version:             0.2.0.0
synopsis:            Advent of Code in Haskell
description:         Please see README.md
homepage:            http://github.com/fboyer/adventofcode-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Frédéric Boyer
maintainer:          fboyer@gmail.com
copyright:           Copyright: (c) 2015 Frédéric Boyer
category:            Learning Haskell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Day1.NotQuiteLisp
                       Day2.IWasToldThereWouldBeNoMath
                       Day3.PerfectlySphericalHousesInAVacuum
                       Day4.TheIdealStockingStuffer
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , split
                     , pureMD5
  default-language:    Haskell2010

executable adventofcode-haskell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode-haskell
  default-language:    Haskell2010

test-suite adventofcode-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcode-haskell
                     , hspec
                     , QuickCheck
  other-modules:       Day1.NotQuiteLispSpec
                       Day2.IWasToldThereWouldBeNoMathSpec
                       Day3.PerfectlySphericalHousesInAVacuumSpec
                       Day4.TheIdealStockingStufferSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fboyer/adventofcode-haskell
